# RustTest1

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  build.rs  e2e_test.py  reqs.md  roadmap.md
.claude/: settings.local.json
src/: analysis.rs  main.rs  models.rs  navigation.rs  tests.rs  theme.rs  utils.rs
src/ui/: browser.rs  dialogs.rs  disks.rs  file_item.rs  mod.rs
tauri-app/: index.html  package-lock.json  package.json  tailwind.config.js
tauri-app/src/: App.tsx  index.css  types.ts
tauri-app/src-tauri/: Cargo.toml  tauri.conf.json
tauri-app/src-tauri/capabilities/: default.json
tauri-app/src-tauri/src/: analysis.rs  lib.rs  main.rs  models.rs  utils.rs
tauri-app/src-tauri/src/commands/: analysis.rs  describe.rs  disks.rs  files.rs  mod.rs
tauri-app/src/components/: Breadcrumb.tsx  DiskPanel.tsx  FileBrowser.tsx  FileItem.tsx  PieChart.tsx  SearchBar.tsx  Toast.tsx
tauri-app/src/components/dialogs/: BatchDeleteDialog.tsx  DeleteDialog.tsx  ErrorDialog.tsx
