[package]
name = "disk-dashboard"
version = "0.4.0"
description = "Disk Capacity Dashboard"
authors = ["you"]
edition = "2021"

[lib]
name = "disk_dashboard_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.31"
